Attempts to solve overflow issue.

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -11,6 +11,7 @@ body,html {
     margin: 0;
 }
 
+
 body {
     background-image: url(images/background.png);
 }
@@ -77,7 +78,6 @@ body {
     background-color: #fff;
     width: 960px;
     height: 100%;
-    min-height: 100vh;
     box-shadow: #000 0 5px 10px;
 }
 
@@ -85,7 +85,7 @@ body {
     padding-top: 0;
     margin-top: 0;
     width: 800px;
-    height: 100%;
+    height: 100vh;
     margin: 0 auto;
 }
 
@@ -171,25 +171,28 @@ body {
     width: 50%;
     height: 100%;
     float: left;
+    clear: both;
 }
 
 li.sports {
     width: 150px;
     margin: 0 auto;
+    height: 20px;
 }
 
-content-wrap-sports {
-    text-align: center;
+#content-wrap-sports {
+    height: 100%;
+
 }
 
 .list-style-sports {
     list-style-type: none;
-    
 }
 
 .sports-buttons {
     margin-bottom: 5px;
     width: 150px;
+    height: 20px;
 }
 
 .sports-content {
